2008-09-17  Matthias Clasen  <mclasen@redhat.com>

	Bug 552107 – Small libtool fixes

	* configure.in: Regenerate libtool early, quote $deplibs_check_method.
	Patch by Patryk Zawadzki

2008-09-17  Matthias Clasen  <mclasen@redhat.com>

	Bug 551722 – gtk_widget_set_scroll_adjustments() should check the
	signal signature

	* gtk/gtkwidget.c (gtk_widget_set_scroll_adjustments): Check the
	signature of the signal. Patch by Christian Persch

2008-09-16  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkwidget.c (_gtk_widget_set,get_pointer_window): don't
	access widget->window if the widget is not realized.

2008-09-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 551987 – GtkPaned redrawing problem

	* gtk/gtkpaned.c: Remove excess invalidations. Patch by Owen Taylor

2008-09-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 551987 – GtkPaned redrawing problem

	* gtk/gtkhpaned.c:
	* gtk/gtkvpaned.c: Queue invalidations when the handle is moved 
	due to child changes. Patch by Owen Taylor

2008-09-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 552001 – gtkimcontextsimple.c: variable is declared at middle of
	block

	* gtk/gtkimcontextsimple.c: Fix a C99ism, pointed out by Kazuki
	Iwamoto.

2008-09-13  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkmain.c: Don't use the deprectated
	g_win32_get_package_installation_directory() and
	g_win32_get_package_installation_subdirectory() functions. Use
	g_win32_get_package_installation_directory_of_module()
	instead. Also, don't use the deprecated silly
	G_WIN32_DLLMAIN_FOR_DLL_NAME() macro, but an explicit minimal
	DllMain() that just saves the DLL handle.

2008-09-13  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 552153 – GtkModules loading with XSettings doesn't work if the
	GTK_MODULES env var isn't set.

	* gtk/gtkmain.c: (do_post_parse_initialization):
	* gtk/gtkmodules.c: (_gtk_modules_init):
	Call _gtk_modules_init () even if gtk_modules_string is NULL, so
	that GtkModules specified with XSettings could be loaded.
