@@ -1,5 +1,12 @@
 2008-09-17  Matthias Clasen  <mclasen@redhat.com>
 
+	Bug 552500 – GtkPrintSettings API doc not precise enough
+
+	* gtk/gtkprintsettings.c: Documentation improvements. Suggested
+	by Guillaume Cottenceau
+
+2008-09-17  Matthias Clasen  <mclasen@redhat.com>
+
 	Bug 552107 – Small libtool fixes
 
 	* configure.in: Regenerate libtool early, quote $deplibs_check_method.
